change webpack version to older one

--- a/app/index.html
+++ b/app/index.html
@@ -8,6 +8,7 @@
 <app>
   <span class="loader">Loading...</span>
 </app>
+<script src="vendor.bundle.js"></script>
 <script src="bundle.js"></script>
 </body>
 </html>
